Iconize redundant parts; polyfill list number

--- a/statute/appendix/tables.html
+++ b/statute/appendix/tables.html
@@ -1,4 +1,6 @@
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="../../docs/styles/common.css" />
+  <link rel="stylesheet" href="../../docs/styles/screen.css" />
   <Raw>
   <h6 data-appendix data-appendix-table data-number="附表二">附表二　國立臺灣大學學院、學系（科）、研究所及學位學程組織系統表<span class="note">（第 12 條附表）</span></h6>
   <table>
@@ -10,87 +12,87 @@
   </tr>
   <tr>
   <td>文學院</td>
-  <td>⒈中國文學系(含碩士班、博士班)<br />⑴國際學生學士班<br />⒉外國語文學系(含碩士班、博士班)<br />⒊歷史學系(含碩士班、博士班)<br />⒋哲學系(含碩士班、博士班)<br />⒌人類學系(含碩士班、博士班)<br />⒍圖書資訊學系(含碩士在職專班、碩士班、博士班)<br />⒎日本語文學系(含碩士班)<br />⒏戲劇學系(含碩士班、博士班)</td>
-  <td>⒈藝術史研究所(含碩士班、博士班)<br />⒉語言學研究所(含碩士班、博士班)<br />⒊音樂學研究所(含碩士班、博士班)<br />⒋臺灣文學研究所(含碩士班、博士班)</td>
+  <td>⒈中國文學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑴國際學生學士班<br />⒉外國語文學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊歷史學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋哲學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌人類學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒍圖書資訊學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒎日本語文學系<span class="squared icon">碩</span><br />⒏戲劇學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈藝術史研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉語言學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊音樂學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋臺灣文學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></td>
   <td>⒈華語教學碩士學位學程<br />⒉翻譯碩士學位學程</td>
   </tr>
   <tr>
   <td>理學院</td>
-  <td>⒈數學系(含碩士班、博士班)<br />⒉物理學系(含碩士在職專班、碩士班、博士班)<br />⒊化學系(含碩士班：化學組、化學生物學組、博士班：化學組、化學生物學組)<br />⒋地質科學系(含碩士在職專班：地質組、碩士班：地質組、應用地質組、博士班)<br />⒌心理學系(含碩士在職專班：一般心理學組、臨床心理學組、碩士班：一般心理學組、臨床心理學組、博士班：一般心理學組、臨床心理學組)<br />⒍地理環境資源學系(含碩士在職專班、碩士班、博士班)<br />⒎大氣科學系(含碩士班、博士班)</td>
-  <td>⒈海洋研究所(含碩士班：海洋物理組、海洋地質及地球物理組、海洋生物及漁業組、海洋化學組、博士班)<br />⒉天文物理研究所(含碩士班、博士班)<br />⒊應用物理學研究所(含碩士班、博士班)<br />⒋應用數學科學研究所(含碩士班)</td>
-  <td>⒈氣候變遷與永續發展國際學位學程(含碩士班、博士班)</td>
+  <td>⒈數學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉物理學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊化學系<span class="squared icon">碩</span>化學組、化學生物學組；<span class="squared icon">博</span>化學組、化學生物學組<br />⒋地質科學系<span class="squared icon">職</span>地質組；<span class="squared icon">碩</span>地質組、應用地質組；<span class="squared icon">博</span><br />⒌心理學系<span class="squared icon">職</span>一般心理學組、臨床心理學組；<span class="squared icon">碩</span>一般心理學組、臨床心理學組；<span class="squared icon">博</span>一般心理學組、臨床心理學組<br />⒍地理環境資源學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒎大氣科學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈海洋研究所<span class="squared icon">碩</span>海洋物理組、海洋地質及地球物理組、海洋生物及漁業組、海洋化學組；<span class="squared icon">博</span><br />⒉天文物理研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊應用物理學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋應用數學科學研究所<span class="squared icon">碩</span></td>
+  <td>⒈氣候變遷與永續發展國際學位學程<span class="squared icon">碩</span><span class="squared icon">博</span></td>
   </tr>
   <tr>
   <td>社會科學院</td>
-  <td>⒈政治學系(含碩士在職專班、碩士班、博士班)<br />⑴政治理論組<br />⑵國際關係組<br />⑶公共行政組<br />⒉經濟學系(含碩士在職專班、碩士班、博士班)<br />⒊社會學系(含碩士班、博士班)<br />⒋社會工作學系(含碩士班、博士班)</td>
-  <td>⒈國家發展研究所(含碩士在職專班、碩士班、博士班)<br />⒉新聞研究所(含碩士班)<br />⒊公共事務研究所(含碩士班)</td>
+  <td>⒈政治學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⑴政治理論組<br />⑵國際關係組<br />⑶公共行政組<br />⒉經濟學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊社會學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋社會工作學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈國家發展研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉新聞研究所<span class="squared icon">碩</span><br />⒊公共事務研究所<span class="squared icon">碩</span></td>
   <td></td>
   </tr>
   <tr>
   <td>醫學院</td>
-  <td>⒈醫學系<br />⑴解剖學暨細胞生物學科(含碩士班、博士班)<br />⑵生物化學暨分子生物學科(含碩士班、博士班)<br />⑶生理學科(含碩士班、博士班)<br />⑷寄生蟲學科<br />⑸微生物學科(含碩士班：微生物及免疫學組、寄生蟲學組、博士班)<br />⑹藥理學科(含碩士班、博士班)<br />⑺醫學教育暨生醫倫理學科(含碩士班)<br />⑻病理學科(含碩士班、博士班)<br />⑼內科<br />⑽外科<br />⑾皮膚科<br />⑿泌尿科<br />⒀小兒科<br />⒁婦產科<br />⒂神經科<br />⒃精神科<br />⒄眼科<br />⒅耳鼻喉科<br />⒆放射線科<br />⒇檢驗醫學科<br />㉑麻醉科<br />㉒法醫學科(含碩士班)<br />㉓家庭醫學科<br />㉔復健科<br />㉕骨科<br />㉖急診醫學科<br />㉗環境暨職業醫學科<br />⒉護理學系(含碩士班、博士班)<br />⒊醫學檢驗暨生物技術學系(含碩士班、博士班)<br />⒋物理治療學系(含碩士班、博士班)<br />⒌職能治療學系(含碩士班、博士班)</td>
-  <td>⒈臨床醫學研究所(含碩士在職專班、博士班)<br />⒉毒理學研究所(含碩士班、博士班)<br />⒊分子醫學研究所(含碩士在職專班、碩士班、博士班)<br />⒋免疫學研究所(含碩士班、博士班)<br />⒌腫瘤醫學研究所(含博士班)<br />⒍基因體暨蛋白體醫學研究所(含碩士班、博士班)<br />⒎腦與心智科學研究所(含碩士班)<br />⒏醫療器材與醫學影像研究所(含碩士班)</td>
+  <td>⒈醫學系<br />⑴解剖學暨細胞生物學科<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑵生物化學暨分子生物學科<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑶生理學科<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑷寄生蟲學科<br />⑸微生物學科<span class="squared icon">碩</span>微生物及免疫學組、寄生蟲學組；<span class="squared icon">博</span><br />⑹藥理學科<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑺醫學教育暨生醫倫理學科<span class="squared icon">碩</span><br />⑻病理學科<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑼內科<br />⑽外科<br />⑾皮膚科<br />⑿泌尿科<br />⒀小兒科<br />⒁婦產科<br />⒂神經科<br />⒃精神科<br />⒄眼科<br />⒅耳鼻喉科<br />⒆放射線科<br />⒇檢驗醫學科<br /><span class="bracketed number">21</span>麻醉科<br /><span class="bracketed number">22</span>法醫學科<span class="squared icon">碩</span><br /><span class="bracketed number">23</span>家庭醫學科<br /><span class="bracketed number">24</span>復健科<br /><span class="bracketed number">25</span>骨科<br /><span class="bracketed number">26</span>急診醫學科<br /><span class="bracketed number">27</span>環境暨職業醫學科<br />⒉護理學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊醫學檢驗暨生物技術學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋物理治療學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌職能治療學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈臨床醫學研究所<span class="squared icon">職</span><span class="squared icon">博</span><br />⒉毒理學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊分子醫學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋免疫學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌腫瘤醫學研究所<span class="squared icon">博</span><br />⒍基因體暨蛋白體醫學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒎腦與心智科學研究所<span class="squared icon">碩</span><br />⒏醫療器材與醫學影像研究所<span class="squared icon">碩</span></td>
   <td>⒈轉譯醫學博士學位學程<br />⒉國際三校農業生技與健康醫療碩士學位學程</td>
   </tr>
   <tr>
   <td>牙醫專業學院</td>
   <td>⒍牙醫學系</td>
-  <td>⒐口腔生物科學研究所(含碩士班、博士班)<br /<td>⒑臨床牙醫學研究所(含碩士在職專班、碩士班、博士班)</td>
+  <td>⒐口腔生物科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br /<td>⒑臨床牙醫學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></td>
   <td></td>
   </tr>
   <tr>
   <td>藥學專業學院</td>
-  <td>⒎藥學系(含碩士班、博士班：藥物科技組、分子醫藥組)</td>
-  <td>⒒臨床藥學研究所(含碩士班、博士班)</td>
+  <td>⒎藥學系<span class="squared icon">碩</span><span class="squared icon">博</span>藥物科技組、分子醫藥組</td>
+  <td>⒒臨床藥學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></td>
   <td></td>
   </tr>
   <tr>
   <td>工學院</td>
-  <td>⒈土木工程學系(含碩士在職專班：營建工程與管理組、碩士班：大地工程組、結構工程組、水利工程組、交通工程組、電腦輔助工程組、營建工程與管理組、測量及空間資訊組、博士班)<br />⒉機械工程學系(含碩士班：流體力學組、熱學組、航空工程組、固體力學組、設計組、製造組、系統控制組、博士班)<br />⒊化學工程學系(含碩士在職專班、碩士班、博士班)<br />⒋工程科學及海洋工程學系(含碩士班、博士班)<br />⒌材料科學與工程學系(含碩士班、博士班)</td>
-  <td>⒈環境工程學研究所(含碩士在職專班：環境規劃與管理組、碩士班：環境科學與工程組、環境規劃與管理組、博士班)<br />⒉應用力學研究所(含碩士班、博士班)<br />⒊建築與城鄉研究所(含碩士班、博士班)<br />⒋工業工程學研究所(含碩士班、博士班)<br />⒌醫學工程學研究所(與醫學院合設)(含碩士班、博士班)<br />⒍高分子科學與工程學研究所(含碩士班、博士班)</td>
+  <td>⒈土木工程學系<span class="squared icon">職</span>營建工程與管理組；<span class="squared icon">碩</span>大地工程組、結構工程組、水利工程組、交通工程組、電腦輔助工程組、營建工程與管理組、測量及空間資訊組；<span class="squared icon">博</span><br />⒉機械工程學系<span class="squared icon">碩</span>流體力學組、熱學組、航空工程組、固體力學組、設計組、製造組、系統控制組；<span class="squared icon">博</span><br />⒊化學工程學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋工程科學及海洋工程學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌材料科學與工程學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈環境工程學研究所<span class="squared icon">職</span>環境規劃與管理組；<span class="squared icon">碩</span>環境科學與工程組、環境規劃與管理組；<span class="squared icon">博</span><br />⒉應用力學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊建築與城鄉研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋工業工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌醫學工程學研究所(與醫學院合設)<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒍高分子科學與工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></td>
   <td>⒈綠色永續材料與精密元件博士學位學程<br />⒉分子科學與技術國際研究生博士學位學程</td>
   </tr>
   <tr>
   <td>生物資源暨農學院</td>
-  <td>⒈農藝學系(含碩士班：作物科學組、生物統計學組、博士班：作物科學組、生物統計學組)<br />⒉生物環境系統工程學系(含碩士班、博士班)<br />⒊農業化學系(含碩士班、博士班)<br />⒋植物病理與微生物學系(含碩士班、博士班)<br />⒌森林環境暨資源學系(含碩士在職專班、碩士班、博士班)<br />⒍動物科學技術學系(含碩士班、博士班)<br />⒎農業經濟學系(含碩士在職專班、碩士班、博士班)<br />⒏園藝暨景觀學系(含碩士班：園藝作物組、園産品處理與利用組、景觀暨休憩組、博士班)<br />⒐生物產業傳播暨發展學系(含碩士班、博士班)<br /<td>⒑生物產業機電工程學系(含碩士班、博士班)<br />11昆蟲學系(含碩士在職專班、碩士班、博士班)</td>
-  <td>⒈食品科技研究所(含碩士班、博士班)<br />⒉生物科技研究所(含碩士班、博士班)</td>
+  <td>⒈農藝學系<span class="squared icon">碩</span>作物科學組、生物統計學組；<span class="squared icon">博</span>作物科學組、生物統計學組)<br />⒉生物環境系統工程學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊農業化學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋植物病理與微生物學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌森林環境暨資源學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒍動物科學技術學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒎農業經濟學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒏園藝暨景觀學系<span class="squared icon">碩</span>園藝作物組、園産品處理與利用組、景觀暨休憩組；<span class="squared icon">博</span><br />⒐生物產業傳播暨發展學系<span class="squared icon">碩</span><span class="squared icon">博</span><br /<td>⒑生物產業機電工程學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />11昆蟲學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈食品科技研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉生物科技研究所<span class="squared icon">碩</span><span class="squared icon">博</span></td>
   <td>⒈植物醫學碩士學位學程</td>
   </tr>
   <tr>
   <td>獸醫專業學院</td>
-  <td>⒓獸醫學系(含碩士班、博士班)</td>
-  <td>⒊臨床動物醫學研究所(含碩士班)<br />⒋分子暨比較病理生物學研究所(含碩士班)</td>
+  <td>⒓獸醫學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒊臨床動物醫學研究所<span class="squared icon">碩</span><br />⒋分子暨比較病理生物學研究所<span class="squared icon">碩</span></td>
   <td></td>
   </tr>
   <tr>
   <td>管理學院</td>
-  <td>⒈工商管理學系<br />⑴企業管理組<br />⑵科技管理組<br />⒉會計學系(含碩士班、博士班)<br />⒊財務金融學系(含碩士班、博士班)<br />⒋國際企業學系(含碩士班、博士班)<br />⒌資訊管理學系(含碩士班、博士班)</td>
-  <td>⒈商學研究所(含碩士在職專班、碩士班、博士班)<br />⒉企業管理碩士專班<br />⒊碩士在職專班：知識管理組、高階公共管理組、會計與管理決策組、財務金融組、國際企業管理組、資訊管理組、商學組<br />⒋臺大-復旦EMBA境外專班<br />⒌創業創新管理碩士在職專班</td>
+  <td>⒈工商管理學系<br />⑴企業管理組<br />⑵科技管理組<br />⒉會計學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊財務金融學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋國際企業學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌資訊管理學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈商學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉企業管理碩士專班<br />⒊碩士在職專班：知識管理組、高階公共管理組、會計與管理決策組、財務金融組、國際企業管理組、資訊管理組、商學組<br />⒋臺大-復旦EMBA境外專班<br />⒌創業創新管理碩士在職專班</td>
   <td></td>
   </tr>
   <tr>
   <td>公共衛生學院</td>
   <td>⒈公共衛生學系</td>
-  <td>⒈職業醫學與工業衛生研究所(含碩士班、博士班)<br />⒉環境衛生研究所(含碩士班、博士班)<br />⒊流行病學與預防醫學研究所(含碩士在職專班、碩士班、博士班)<br />⒋健康政策與管理研究所(含碩士在職專班、碩士班、博士班、高階經營碩士在職專班)<br />⒌健康行為與社區科學研究所(含碩士班)<br />⒍食品安全與健康研究所(含碩士班)</td>
+  <td>⒈職業醫學與工業衛生研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉環境衛生研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊流行病學與預防醫學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋健康政策與管理研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span>；高階經營碩士在職專班<br />⒌健康行為與社區科學研究所<span class="squared icon">碩</span><br />⒍食品安全與健康研究所<span class="squared icon">碩</span></td>
   <td>⒈公共衛生碩士學位學程</td>
   </tr>
   <tr>
   <td>電機資訊學院</td>
-  <td>⒈電機工程學系(含碩士在職專班、碩士班、博士班)<br />⒉資訊工程學系(含碩士在職專班、碩士班、博士班)</td>
-  <td>⒈光電工程學研究所(含碩士班、博士班)<br />⒉電信工程學研究所(含碩士在職專班、碩士班、博士班)<br />⒊電子工程學研究所(含碩士在職專班、碩士班、博士班)<br />⒋資訊網路與多媒體研究所(含碩士班、博士班)<br />⒌生醫電子與資訊學研究所(含碩士在職專班、碩士班、博士班)</td>
-  <td>⒈資料科學學位學程(含碩士學位、博士學位)<br />⒉生物資訊學國際研究生博士學位學程</td>
+  <td>⒈電機工程學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉資訊工程學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈光電工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉電信工程學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊電子工程學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋資訊網路與多媒體研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌生醫電子與資訊學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈資料科學學位學程<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉生物資訊學國際研究生博士學位學程</td>
   </tr>
   <tr>
   <td>法律學院</td>
-  <td>⒈法律學系(含碩士班、博士班)<br />⑴法學組<br />⑵司法組<br />⑶財經法學組</td>
-  <td>⒈科際整合法律學研究所(含碩士班)</td>
+  <td>⒈法律學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑴法學組<br />⑵司法組<br />⑶財經法學組</td>
+  <td>⒈科際整合法律學研究所<span class="squared icon">碩</span></td>
   <td></td>
   </tr>
   <tr>
   <td>生命科學院</td>
-  <td>⒈生命科學系(含碩士班、博士班)<br />⒉生化科技學系(含碩士班、博士班)</td>
-  <td>⒈植物科學研究所(含碩士班、博士班)<br />⒉分子與細胞生物學研究所(含碩士班、博士班)<br />⒊生態學與演化生物學研究所(含碩士班、博士班)<br />⒋漁業科學研究所(含碩士班、博士班)<br />⒌生化科學研究所(含碩士班、博士班)</td>
-  <td>⒈基因體與系統生物學學位學程(含碩士學位、博士學位)<br />⒉跨領域神經科學國際研究生博士學位學程</td>
+  <td>⒈生命科學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉生化科技學系<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈植物科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉分子與細胞生物學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒊生態學與演化生物學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒋漁業科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒌生化科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></td>
+  <td>⒈基因體與系統生物學學位學程<span class="squared icon">碩</span><span class="squared icon">博</span><br />⒉跨領域神經科學國際研究生博士學位學程</td>
   </tr>
   <tr>
   <td>共同教育中心</td>
@@ -105,6 +107,7 @@
   <td>⒈事業經營碩士在職學位學程<br />⒉事業經營法務碩士在職學位學程<br />⒊生物科技管理碩士在職學位學程</td>
   </tr>
   </table>
+  <p class="footnote"><span class="squared icon">碩</span>含碩士班／學位；<span class="squared icon">博</span>：含博士班／學位；<span class="squared icon">職</span>：含在職碩士專班。</p>
   <p class="footnote">106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 105 年 8 月 1 日生效。</p>
   <h6 data-appendix data-appendix-table data-number="附表二">附表二　國立臺灣大學及學院附設機構組織系統表<span class="note">（第 25 條附表）</span></h6>
   <table>
