Implement source file replacement

--- a/statute/features/01_國立臺灣大學組織規程附表.html
+++ b/statute/features/01_國立臺灣大學組織規程附表.html
@@ -1,8 +1,5 @@
-  <meta charset="utf-8" />
-  <link rel="stylesheet" href="../../docs/styles/common.css" />
-  <link rel="stylesheet" href="../../docs/styles/screen.css" />
   <Raw>
-  <h6 data-appendix data-appendix-table data-number="附表二">附表二　國立臺灣大學學院、學系（科）、研究所及學位學程組織系統表<span class="note">（第 12 條附表）</span></h6>
+  <h6 data-appendix data-appendix-table data-number="附表一">附表一　國立臺灣大學學院、學系（科）、研究所及學位學程組織系統表<span class="note">（第 12 條附表）</span></h6>
   <table>
   <tr>
   <th style="width: 5em">學院</th>
