Tweak table styles

--- a/statute/features/01_國立臺灣大學組織規程附表.html
+++ b/statute/features/01_國立臺灣大學組織規程附表.html
@@ -1,10 +1,10 @@
   <Raw>
-  <h6 data-appendix data-appendix-table data-number="附表一">附表一　國立臺灣大學學院、學系（科）、研究所及學位學程組織系統表<span class="note">（第 12 條附表）</span></h6>
+  <h6 data-appendix data-appendix-table data-number="附表一">附表一　國立臺灣大學學院、學系（科）、研究所及學位學程組織系統表<span class="note">（第 12 條附表）</span></h6>
   <table class="left-aligned bulleted">
   <tr>
   <th style="width: 5em">學院</th>
-  <th>學系（科）</th>
-  <th>研究所</th>
+  <th style="width: 15em">學系（科）</th>
+  <th style="width: 13em">研究所</th>
   <th>學位學程</th>
   </tr>
   <tr>
@@ -105,13 +105,13 @@
   </tr>
   </table>
   <p class="footnote"><span class="squared icon">碩</span>：含碩士班／學位；<span class="squared icon">博</span>：含博士班／學位；<span class="squared icon">職</span>：含在職碩士專班。</p>
-  <p class="footnote">106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 105 年 8 月 1 日生效。</p>
-  <h6 data-appendix data-appendix-table data-number="附表二">附表二　國立臺灣大學及學院附設機構組織系統表<span class="note">（第 25 條附表）</span></h6>
+  <p class="footnote">民國 106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 105 年 8 月 1 日生效。</p>
+  <h6 data-appendix data-appendix-table data-number="附表二">附表二　國立臺灣大學及學院附設機構組織系統表<span class="note">（第 25 條附表）</span></h6>
   <table class="left-aligned">
   <tr>
   <th style="width: 3em">層級</th>
   <th>附設機構名稱</th>
-  <th style="width: 5em">備註</th>
+  <th style="width: 12em">備註</th>
   </tr>
   <tr>
   <td class="header">校級</td>
@@ -140,12 +140,12 @@
   <td>國立臺灣大學生物資源暨農學院附設山地實驗農場</td>
   </tr>
   </table>
-  <p class="footnote">103 年 11 月 25 日臺教高(一)字第 1030170312 號函核定；自核定函日期生效。</p>
-  <h6 data-appendix data-appendix-table data-number="附表三">附表三　國立臺灣大學及學院研究中心、館、所、委員會組織系統表<span class="note">（第 29 條附表）</span></h6>
+  <p class="footnote">民國 103 年 11 月 25 日臺教高(一)字第 1030170312 號函核定；自核定函日期生效。</p>
+  <h6 data-appendix data-appendix-table data-number="附表三">附表三　國立臺灣大學及學院研究中心、館、所、委員會組織系統表<span class="note">（第 29 條附表）</span></h6>
   <table class="left-aligned">
   <tr>
   <th colspan="2">名稱</th>
-  <th style="width: 5em">備註</th>
+  <th style="width: 16em">備註</th>
   </tr>
   <tr>
   <td class="header" rowspan="4" style="width: 5em"></td>
@@ -261,8 +261,8 @@
   <td></td>
   </tr>
   </table>
-  <p class="footnote">106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 106 年 8 月 1 日生效。</p>
-  <h6 data-appendix data-appendix-table data-number="附表四">附表四　國立臺灣大學校務會議各種委員會及專案小組系統表<span class="note">（第 41 條附表）</span></h6>
+  <p class="footnote">民國 106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 106 年 8 月 1 日生效。</p>
+  <h6 data-appendix data-appendix-table data-number="附表四">附表四　國立臺灣大學校務會議各種委員會及專案小組系統表<span class="note">（第 41 條附表）</span></h6>
   <table class="left-aligned bulleted">
   <tr>
   <th>名稱</th>
@@ -285,5 +285,5 @@
   <td></td>
   </tr>
   </table>
-  <p class="footnote">104 年 11 月 4 日臺教高(一)字第 1040149827 號函核定；本表自 105 年 1 月 10 日生效。</p>
+  <p class="footnote">民國 104 年 11 月 4 日臺教高(一)字第 1040149827 號函核定；本表自 105 年 1 月 10 日生效。</p>
   </Raw>
