Tweak appendix table layout

--- a/statute/features/01_國立臺灣大學組織規程附表.html
+++ b/statute/features/01_國立臺灣大學組織規程附表.html
@@ -20,7 +20,7 @@
   <td><li>⒈氣候變遷與永續發展國際學位學程<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   </tr>
   <tr>
-  <td class="header">社會科學院</td>
+  <td class="header">社會<wbr />科學院</td>
   <td><li>⒈政治學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span><br />⑴政治理論組<br />⑵國際關係組<br />⑶公共行政組</li><li>⒉經濟學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊社會學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋社會工作學系<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈國家發展研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉新聞研究所<span class="squared icon">碩</span></li><li>⒊公共事務研究所<span class="squared icon">碩</span></li></td>
   <td></td>
@@ -32,13 +32,13 @@
   <td><li>⒈轉譯醫學博士學位學程</li><li>⒉國際三校農業生技與健康醫療碩士學位學程</li></td>
   </tr>
   <tr class="segmented">
-  <td class="header">牙醫專業學院</td>
+  <td class="header">牙醫<wbr />專業<wbr />學院</td>
   <td><li>⒍牙醫學系</li></td>
   <td><li>⒐口腔生物科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒑臨床牙醫學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td></td>
   </tr>
   <tr class="segmented">
-  <td class="header">藥學專業學院</td>
+  <td class="header">藥學<wbr />專業<wbr />學院</td>
   <td><li>⒎藥學系<span class="squared icon">碩</span><span class="squared icon">博</span>藥物科技組、分子醫藥組</li></td>
   <td><li>⒒臨床藥學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td></td>
@@ -46,67 +46,67 @@
   <tr>
   <td class="header">工學院</td>
   <td><li>⒈土木工程學系<span class="squared icon">職</span>營建工程與管理組；<span class="squared icon">碩</span>大地工程組、結構工程組、水利工程組、交通工程組、電腦輔助工程組、營建工程與管理組、測量及空間資訊組；<span class="squared icon">博</span></li><li>⒉機械工程學系<span class="squared icon">碩</span>流體力學組、熱學組、航空工程組、固體力學組、設計組、製造組、系統控制組；<span class="squared icon">博</span></li><li>⒊化學工程學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋工程科學及海洋工程學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌材料科學與工程學系<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
-  <td><li>⒈環境工程學研究所<span class="squared icon">職</span>環境規劃與管理組；<span class="squared icon">碩</span>環境科學與工程組、環境規劃與管理組；<span class="squared icon">博</span></li><li>⒉應用力學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊建築與城鄉研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋工業工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌醫學工程學研究所(與醫學院合設)<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒍高分子科學與工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
+  <td><li>⒈環境工程學研究所<span class="squared icon">職</span>環境規劃與管理組；<span class="squared icon">碩</span>環境科學與工程組、環境規劃與管理組；<span class="squared icon">博</span></li><li>⒉應用力學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊建築與城鄉研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋工業工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌醫學工程學研究所（與醫學院合設）<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒍高分子科學與工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈綠色永續材料與精密元件博士學位學程</li><li>⒉分子科學與技術國際研究生博士學位學程</li></td>
   </tr>
   <tr>
-  <td class="header">生物資源暨農學院</td>
+  <td class="header">生物<wbr />資源<wbr />暨<wbr />農學院</td>
   <td><li>⒈農藝學系<span class="squared icon">碩</span>作物科學組、生物統計學組；<span class="squared icon">博</span>作物科學組、生物統計學組)</li><li>⒉生物環境系統工程學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊農業化學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋植物病理與微生物學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌森林環境暨資源學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒍動物科學技術學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒎農業經濟學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒏園藝暨景觀學系<span class="squared icon">碩</span>園藝作物組、園産品處理與利用組、景觀暨休憩組；<span class="squared icon">博</span></li><li>⒐生物產業傳播暨發展學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒑生物產業機電工程學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒒昆蟲學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈食品科技研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉生物科技研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈植物醫學碩士學位學程</li></td>
   </tr>
   <tr class="segmented">
-  <td class="header">獸醫專業學院</td>
+  <td class="header">獸醫<wbr />專業<wbr />學院</td>
   <td><li>⒓獸醫學系<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒊臨床動物醫學研究所<span class="squared icon">碩</span></li><li>⒋分子暨比較病理生物學研究所<span class="squared icon">碩</span></li></td>
   <td></td>
   </tr>
   <tr>
-  <td class="header">管理學院</td>
+  <td class="header">管理<wbr />學院</td>
   <td><li>⒈工商管理學系<br />⑴企業管理組<br />⑵科技管理組</li><li>⒉會計學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊財務金融學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋國際企業學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌資訊管理學系<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈商學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉企業管理碩士專班</li><li>⒊碩士在職專班：知識管理組、高階公共管理組、會計與管理決策組、財務金融組、國際企業管理組、資訊管理組、商學組</li><li>⒋臺大-復旦EMBA境外專班</li><li>⒌創業創新管理碩士在職專班</li></td>
   <td></td>
   </tr>
   <tr>
-  <td class="header">公共衛生學院</td>
+  <td class="header">公共<wbr />衛生<wbr />學院</td>
   <td><li>⒈公共衛生學系</li></td>
   <td><li>⒈職業醫學與工業衛生研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉環境衛生研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊流行病學與預防醫學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋健康政策與管理研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span>；高階經營碩士在職專班</li><li>⒌健康行為與社區科學研究所<span class="squared icon">碩</span></li><li>⒍食品安全與健康研究所<span class="squared icon">碩</span></li></td>
   <td><li>⒈公共衛生碩士學位學程</li></td>
   </tr>
   <tr>
-  <td class="header">電機資訊學院</td>
+  <td class="header">電機<wbr />資訊<wbr />學院</td>
   <td><li>⒈電機工程學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉資訊工程學系<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈光電工程學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉電信工程學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊電子工程學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋資訊網路與多媒體研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌生醫電子與資訊學研究所<span class="squared icon">職</span><span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈資料科學學位學程<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉生物資訊學國際研究生博士學位學程</li></td>
   </tr>
   <tr>
-  <td class="header">法律學院</td>
+  <td class="header">法律<wbr />學院</td>
   <td><li>⒈法律學系<span class="squared icon">碩</span><span class="squared icon">博</span><br />⑴法學組<br />⑵司法組<br />⑶財經法學組</li></td>
   <td><li>⒈科際整合法律學研究所<span class="squared icon">碩</span></li></td>
   <td></td>
   </tr>
   <tr>
-  <td class="header">生命科學院</td>
+  <td class="header">生命<wbr />科學院</td>
   <td><li>⒈生命科學系<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉生化科技學系<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈植物科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉分子與細胞生物學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒊生態學與演化生物學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒋漁業科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒌生化科學研究所<span class="squared icon">碩</span><span class="squared icon">博</span></li></td>
   <td><li>⒈基因體與系統生物學學位學程<span class="squared icon">碩</span><span class="squared icon">博</span></li><li>⒉跨領域神經科學國際研究生博士學位學程</li></td>
   </tr>
   <tr>
-  <td class="header">共同教育中心</td>
+  <td class="header">共同<wbr />教育<wbr />中心</td>
   <td></td>
   <td></td>
   <td><li>⒈統計碩士學位學程</li><li>⒉運動設施與健康管理碩士學位學程</li></td>
   </tr>
   <tr>
-  <td class="header">進修推廣學院(進修學士班)</td>
+  <td class="header">進修<wbr />推廣<wbr />學院(進修<wbr />學士班)</td>
   <td><li>⒈中國文學系</li><li>⒉外國語文學系</li><li>⒊歷史學系</li><li>⒋法律學系</li><li>⒌企業管理學系</li></td>
   <td></td>
   <td><li>⒈事業經營碩士在職學位學程</li><li>⒉事業經營法務碩士在職學位學程</li><li>⒊生物科技管理碩士在職學位學程</li></td>
   </tr>
   </table>
   <p class="footnote"><span class="squared icon">碩</span>：含碩士班／學位；<span class="squared icon">博</span>：含博士班／學位；<span class="squared icon">職</span>：含在職碩士專班。</p>
-  <p class="footnote">民國 106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 105 年 8 月 1 日生效。</p>
-  <h6 data-appendix data-appendix-table data-number="附表二">附表二　國立臺灣大學及學院附設機構組織系統表<span class="note">（第 25 條附表）</span></h6>
+  <p class="footnote">民國 106 年 9 月 29 日臺教高㈠字第 1060135920 號函核定；本表自 105 年 8 月 1 日生效。</p>
+  <h6 data-appendix data-appendix-table data-number="附表二" class="mini">附表二　國立臺灣大學及學院附設機構組織系統表<span class="note">（第 25 條附表）</span></h6>
   <table class="left-aligned">
   <tr>
   <th style="width: 3em">層級</th>
@@ -140,7 +140,7 @@
   <td>國立臺灣大學生物資源暨農學院附設山地實驗農場</td>
   </tr>
   </table>
-  <p class="footnote">民國 103 年 11 月 25 日臺教高(一)字第 1030170312 號函核定；自核定函日期生效。</p>
+  <p class="footnote">民國 103 年 11 月 25 日臺教高㈠字第 1030170312 號函核定；自核定函日期生效。</p>
   <h6 data-appendix data-appendix-table data-number="附表三">附表三　國立臺灣大學及學院研究中心、館、所、委員會組織系統表<span class="note">（第 29 條附表）</span></h6>
   <table class="left-aligned">
   <tr>
@@ -192,7 +192,7 @@
   <td></td>
   </tr>
   <tr class="segmented">
-  <td class="header">藥學專業學院</td>
+  <td class="header">藥學<wbr />專業<wbr />學院</td>
   <td>藥物研究中心</td>
   <td></td>
   </tr>
@@ -226,7 +226,7 @@
   <td>（與電機資訊學院合設）</td>
   </tr>
   <tr>
-  <td class="header" rowspan="4">生物資源暨農學院</td>
+  <td class="header" rowspan="4">生物<wbr />資源<wbr />暨<wbr />農學院</td>
   <td>農業陳列館</td>
   <td></td>
   </tr>
@@ -243,7 +243,7 @@
   <td>（與生物資源暨農學院合設）</td>
   </tr>
   <tr>
-  <td class="header" rowspan="2">電機資訊學院</td>
+  <td class="header" rowspan="2">電機<wbr />資訊<wbr />學院</td>
   <td>物聯網研究中心</td>
   <td></td>
   </tr>
@@ -252,7 +252,7 @@
   <td>（與電機資訊學院合設）</td>
   </tr>
   <tr>
-  <td class="header" rowspan="2">生命科學院</td>
+  <td class="header" rowspan="2">生命<wbr />科學院</td>
   <td>漁業生物試驗所</td>
   <td></td>
   </tr>
@@ -261,8 +261,8 @@
   <td></td>
   </tr>
   </table>
-  <p class="footnote">民國 106 年 9 月 29 日臺教高(一)字第 1060135920 號函核定；本表自 106 年 8 月 1 日生效。</p>
-  <h6 data-appendix data-appendix-table data-number="附表四">附表四　國立臺灣大學校務會議各種委員會及專案小組系統表<span class="note">（第 41 條附表）</span></h6>
+  <p class="footnote">民國 106 年 9 月 29 日臺教高㈠字第 1060135920 號函核定；本表自 106 年 8 月 1 日生效。</p>
+  <h6 data-appendix data-appendix-table data-number="附表四" class="mini">附表四　國立臺灣大學校務會議各種委員會及專案小組系統表<span class="note">（第 41 條附表）</span></h6>
   <table class="left-aligned bulleted">
   <tr>
   <th>名稱</th>
@@ -285,5 +285,5 @@
   <td></td>
   </tr>
   </table>
-  <p class="footnote">民國 104 年 11 月 4 日臺教高(一)字第 1040149827 號函核定；本表自 105 年 1 月 10 日生效。</p>
+  <p class="footnote">民國 104 年 11 月 4 日臺教高㈠字第 1040149827 號函核定；本表自 105 年 1 月 10 日生效。</p>
   </Raw>
