Update ISBN; fine tune editorial notes

--- a/statute/printing/editorial_notes.html
+++ b/statute/printing/editorial_notes.html
@@ -7,16 +7,18 @@
         <li>在不影響文意範圍內盡量簡化立法歷程文字<span class="note">（如將「學生代表大會」簡寫為「學代會」）</span>、統一修法日期標示、正規化英數字元間距。</li>
         <li>納入原《法規彙編》未收錄之相關法規及其附表，並重新排版以利參考。</li>
     </ol>
-    <h4>版本紀錄</h4>
+    <h4>二版版本資訊</h4>
     <ol class="items">
         <li>法規更新至 106 學年度第 2 學期學生代表大會第一次常會。</li>
         <li>補錄《法規彙編》遺漏之〈國立臺灣大學學生權利大憲章〉。</li>
         <li>收錄〈國立臺灣大學組織規程〉附表一至四。</li>
-        <li>收錄〈國立臺灣大學學則〉、〈國立臺灣大學學生申訴評議辦法〉等實用校內法規十則，並不再收錄與一般六法範圍重疊之〈行政訴訟法〉。</li>
+        <li>綜合學權實務經驗，收錄〈國立臺灣大學學則〉等十則校內法規，涵蓋學務、教務與校園空間的常見議題。</li>
+        <li>衡量篇幅與實用性，不再收錄六法範圍內之〈行政訴訟法〉。</li>
         <li>將學生法院解釋文中的術語以不同英文字體標示。</li>
         <li>封底加註用於編譯法典的《法規彙編》基礎版本號。</li>
         <li>將學校法規慣用之「年.月.日」格式以正式日期寫法取代。</li>
         <li>微調版面格式、字體與行距。</li>
     </ol>
-    <p class="text">關於本書之授權與版本更新，請參照版權頁與專案首頁。</p>
+    <p class="text">本書之編纂與《法規彙編》之正確性密切關聯，校訂過程中發見之錯誤，亦悉數貢獻回原《法規彙編》版本庫；關於本書之授權、勘誤與內容更新，請參照版權頁所附之專案首頁連結，亦可搭配線上版本參考使用。</p>
+    <time>民國 107 年 3 月</time>
 </div>
