--- a/statute/printing/copyright.html
+++ b/statute/printing/copyright.html
@@ -4,7 +4,7 @@
     <div id="cip_card">
       國立臺灣大學學生會簡明法規彙編／姜柏任編輯. -- 2版. -- 臺北市：國立臺灣大學開源社, 2017.04<br />
       　　面；　　　公分<br /><br /><br />
-      ISBN ___-___-__-_＿__-_（平裝）<br /><br />
+      ISBN 978-986-96337-0-3（平裝）<br /><br />
       1. 學生自治　2. 學生自治組織法規<br /><br />
       <span id="cip_number">（申請中）</span>
       526.48
