--- a/statute/printing/copyright.html
+++ b/statute/printing/copyright.html
@@ -2,12 +2,12 @@
   <div id="cip">
     <div id="cip_title">國家圖書館出版品預行編目資料</div>
     <div id="cip_card">
-      國立臺灣大學學生會簡明法規彙編／姜柏任編輯. -- 2版. -- 臺北市：國立臺灣大學開源社, 2017.04<br />
-      　　面；　　　公分<br /><br /><br />
+      國立臺灣大學學生會簡明法規彙編／姜柏任編輯. -- 二版. -- 臺北市：臺大開源社, 民107.04<br />
+      　面；　公分<br /><br /><br />
       ISBN 978-986-96337-0-3（平裝）<br /><br />
-      1. 學生自治　2. 學生自治組織法規<br /><br />
-      <span id="cip_number">（申請中）</span>
-      526.48
+      1. 學生自治　2. 教育法規<br /><br />
+      <span id="cip_number">107004451</span>
+      527.36023
     </div>
   </div>
   <table>
