Update build script and add final date

--- a/statute/printing/editorial_notes.html
+++ b/statute/printing/editorial_notes.html
@@ -20,5 +20,5 @@
         <li>微調版面格式、字體與行距。</li>
     </ol>
     <p class="text">本書之編纂與《法規彙編》之正確性密切關聯，校訂過程中發見之錯誤，亦悉數貢獻回原《法規彙編》版本庫；關於本書之授權、勘誤與內容更新，請參照版權頁所附之專案首頁連結，亦可搭配線上版本參考使用。</p>
-    <time>107 年 3 月</time>
+    <time>民國 107 年 3 月 20 日</time>
 </div>
